--- a/AOP/插件化/插件加载机制.md
+++ b/AOP/插件化/插件加载机制.md
@@ -95,7 +95,7 @@ Java类加载过程包括:加载,验证,准备,解析和初始化五个阶段,**
 
 1. 全面接管系统的类加载过程
 
-2. 单单告诉系统插件位置,让系统帮忙加载
+2. 将插件位置告诉系统类加载器,让系统帮忙加载
 
 - **这俩种方式都需要干预类加载这个过程**
 
@@ -108,29 +108,225 @@ Java类加载过程包括:加载,验证,准备,解析和初始化五个阶段,**
 
 	- 具体的类加载器 是交给`ContextImpl`来实现的
 
-2. ContextImpl.getClassLoader()
+2. `ContextImpl.getClassLoader()`
 
 	    @Override
 	    public ClassLoader getClassLoader() {
 	        return mClassLoader != null ? mClassLoader : (mPackageInfo != null ? mPackageInfo.getClassLoader() : ClassLoader.getSystemClassLoader());
 	    }
 
-3. ClassLoader
+	- **`mClassLoader`是ClassLoader的缓存.**
+	
+	- `mPackageInfo`是`LoadedApk`类型,从构造函数中传入(在`ActivityThread.performLaunchActivity().createBaseContextForActivity()`中被创建),可能为空(被`@Nullable`修饰)
+
+	**`LoadedApk`对象是APK文件在内存中的表示.APk文件的相关信息,比如Apk文件的代码和资源,更具体点就是代码里面的Activity,Service等组件的信息**
+
+			//LoadedApk
+			Local state maintained about a currently loaded .apk.
+
+- 通过`LoadedApk`获取类加载器:
+
+	    private void createOrUpdateClassLoaderLocked(List<String> addedPaths) {
+	        if (mPackageName.equals("android")) {
+	            // Note: This branch is taken for system server and we don't need to setup
+	            // jit profiling support.
+	            if (mClassLoader != null) {
+	                // nothing to update
+	                return;
+	            }
+	
+	            if (mBaseClassLoader != null) {
+	                mClassLoader = mBaseClassLoader;
+	            } else {
+	                mClassLoader = ClassLoader.getSystemClassLoader();
+	            }
+	
+	            return;
+	        }
+			``省略代码``
+	    }
+	
+	    public ClassLoader getClassLoader() {
+	        synchronized (this) {
+	            if (mClassLoader == null) {
+	                createOrUpdateClassLoaderLocked(null /*addedPaths*/);
+	            }
+	            return mClassLoader;
+	        }
+	    }
+
+- 通过`ClassLoader`获取类加载器:
 
 	    @CallerSensitive
 	    public static ClassLoader getSystemClassLoader() {
 	        return SystemClassLoader.loader;
 	    }
 
-4. ClassLoader.createSystemClassLoader()
-
 	    static private class SystemClassLoader {
 	        public static ClassLoader loader = ClassLoader.createSystemClassLoader();
 	    }
 
-5. ClassLoader.createSystemClassLoader()
 	    private static ClassLoader createSystemClassLoader() {
 	        String classPath = System.getProperty("java.class.path", ".");
 	        String librarySearchPath = System.getProperty("java.library.path", "");
 	        return new PathClassLoader(classPath, librarySearchPath, BootClassLoader.getInstance());
 	    }
+
+**Activity所用的类加载器获取总结:**
+
+- **ClassLoader优先从缓存中获取,没有缓存则通过`LoadedApk`获取,没有`LoadedApk`则通过`ClassLoader`获取**.**通过`LoadedApk`最终也是通过`ClassLoader`获取类加载器**
+
+## 4.3 Hook点分析
+
+已经知道类加载器的获取 会优先借助`LoadedApk`(`LoadedApk.getClassLoader()`),其次再是直接通过`ClassLoader`获取.
+
+那么查看一下`LoadedApk`的生成方式,查看是否能够借助这个类来实现对`ClassLoader`的修改
+
+### 4.3.1 LoadedApk的创建方式
+
+在`ActivityThread.mH.handleMessage()`的`LAUNCH_ACTIVITY`中查看到 `LoadedApk`的首次创建
+
+		case LAUNCH_ACTIVITY: {
+		
+			final ActivityClientRecord r = (ActivityClientRecord) msg.obj;
+			r.packageInfo = getPackageInfoNoCheck(
+                            r.activityInfo.applicationInfo, r.compatInfo);
+			handleLaunchActivity(r, null, "LAUNCH_ACTIVITY");
+	
+		} break;
+		
+	    public final LoadedApk getPackageInfoNoCheck(ApplicationInfo ai,
+	            CompatibilityInfo compatInfo) {
+	        return getPackageInfo(ai, compatInfo, null, false, true, false);
+	    }
+
+	    private LoadedApk getPackageInfo(ApplicationInfo aInfo, CompatibilityInfo compatInfo,
+	            ClassLoader baseLoader, boolean securityViolation, boolean includeCode,
+	            boolean registerPackage) {
+			//获取userid,并判断是否是同一个
+	        final boolean differentUser = (UserHandle.myUserId() != UserHandle.getUserId(aInfo.uid));
+	        synchronized (mResourcesManager) {
+				//根据 userid 获取缓存信息
+	            WeakReference<LoadedApk> ref;
+	            if (differentUser) {
+	                // Caching not supported across users
+	                ref = null;
+				//includeCode = true
+	            } else if (includeCode) {
+	                ref = mPackages.get(aInfo.packageName);
+	            } else {
+	                ref = mResourcePackages.get(aInfo.packageName);
+	            }
+	
+	            LoadedApk packageInfo = ref != null ? ref.get() : null;
+	            if (packageInfo == null || (packageInfo.mResources != null
+	                    && !packageInfo.mResources.getAssets().isUpToDate())) {
+					//缓存不存在,直接创建
+	                packageInfo =
+	                    new LoadedApk(this, aInfo, compatInfo, baseLoader,
+	                            securityViolation, includeCode &&
+	                            (aInfo.flags&ApplicationInfo.FLAG_HAS_CODE) != 0, registerPackage);
+					//存入缓存
+	                if (mSystemThread && "android".equals(aInfo.packageName)) {
+	                    packageInfo.installSystemApplicationInfo(aInfo,
+	                            getSystemContext().mPackageInfo.getClassLoader());
+	                }
+	
+	                if (differentUser) {
+	                    // Caching not supported across users
+	                } else if (includeCode) {
+	                    mPackages.put(aInfo.packageName,
+	                            new WeakReference<LoadedApk>(packageInfo));
+	                } else {
+	                    mResourcePackages.put(aInfo.packageName,
+	                            new WeakReference<LoadedApk>(packageInfo));
+	                }
+	            }
+	            return packageInfo;
+	        }
+	    }
+
+1. `getPackageInfo`首先判断了调用方和保存App信息的一方是否是同一个userID,如果是同一个user  那么就可以使用共享的缓存数据(要么缓存的代码数据,要么缓存的资源数据)
+
+2. 然后尝试获取缓存数据,如果没有缓存数据,那么直接创建LoadedApk对象.并且在创建成功之后会放入缓存(会判断userid)
+
+### 4.3.2  Hook点
+
+**已经知道获取类加载器会优先从缓存中获取(这个缓存就是包名和LoadedApk的一个映射),这个保存缓存对象的数组是ActivityThread的成员变量,另外ActivityThread是唯一的,仅在进程初始化时 被创建一次,所以只需要hook掉这一个点, 就能对所有获取类加载器的地方都起作用**
+
+	//ActivityThread
+    @GuardedBy("mResourcesManager")
+    final ArrayMap<String, WeakReference<LoadedApk>> mPackages = new ArrayMap<>();
+    @GuardedBy("mResourcesManager")
+    final ArrayMap<String, WeakReference<LoadedApk>> mResourcePackages = new ArrayMap<>();
+
+## 4.4 Hook方案
+
+根据之前的解决思路,可以有俩套方案去Hook 这个点:
+
+1. 针对`mPackages`缓存进行Hook,将原始的`LoadedApk.getClassLoader()`方法进行Hook,使其能返回修改过的ClassLoader.这样在`perfromLaunchActivity()`中即可找到插件所在,并执行接下来的逻辑.
+
+2. 通过Hook掉ClassLoader的`DexPathList`,将插件信息放入其中
+
+
+# 5. 方案一
+
+## 5.1 获取ArrayMap mPackages对象
+
+首先需要获取到`获取ArrayMap mPackages`对象,因为需要借助这个对象去替换掉原先的`LoadedApk`,该对象存在于ActivityThread中.
+
+
+## 5.2 往mPackages对象中插入修改过的LoadedApk
+
+已经知道`mPackages`作为缓存使用,它是获取LoadedApk的重要媒介,并且在获取到`LoadedApk`之后,会获取`ClassLoader`.那么 第二步 就是需要获取到这个LoadedApk
+
+这里有俩种方式去获取到`LoadedApk`:
+
+1. `mPackages`中已经存在,那么直接提取出来用即可.**但是,LoadedApk 是一个隐藏类,且没有接口,无法创建代理**
+
+2. 直接构建LoadedApk对象
+
+## 5.3 构建LoadedApk
+
+虽然可以直接通过反射调用它的构造函数直接创建出对象,但是这样对参数的准确性有很高的要求,一旦参数使用错误 可能就无法被系统所使用.
+
+系统创建`LoadedApk`的方式 在4.3.1中已经分析过.**可以通过反射调用ActivityThread.getPackageInfoNoCheck()来获取到LoadedApk**,优先使用`getPackageInfoNoCheck()`而不使用`getPackageInfo()`是因为前者是 **公开的方法而后者是私有的方法,而且私有的方法很容易遭到修改**
+
+    public final LoadedApk getPackageInfoNoCheck(ApplicationInfo ai,
+            CompatibilityInfo compatInfo) {
+        return getPackageInfo(ai, compatInfo, null, false, true, false);
+    }
+
+    private LoadedApk getPackageInfo(ApplicationInfo aInfo, CompatibilityInfo compatInfo,
+            ClassLoader baseLoader, boolean securityViolation, boolean includeCode,
+            boolean registerPackage) {
+
+	}
+
+- 为了调用`getPackageInfoNoCheck()`需要俩个参数,`ApplicationInfo`和`CompatibilityInfo`.
+
+### 5.3.1 构建ApplicationInfo
+ApplicationInfo的简介如下:
+
+> Information you can retrieve about a particular application. 
+>  This corresponds to information collected from the AndroidManifest.xml's &lt;application&gt; tag.
+>  该类就是清单文件中application标签下的信息
+
+
+**Android系统提供了`PackageParse`用来解析清单文件从而获得ApplicationInfo类(具体的代码可以在PMS中查看).但是这个类的兼容性很差!几乎每个Android版本都对应一种实现方式!!!**
+
+**反射私有或隐藏API时,需要处理好兼容性问题 尽量反射那些公开的方法,字段 因为谷歌通常不会对这种 公有的方法,字段进行修改,但是也不绝对**
+	
+	//PackageParse.generateApplicationInfo()
+    public static ApplicationInfo generateApplicationInfo(Package p, int flags,
+            PackageUserState state) {
+        return generateApplicationInfo(p, flags, state, UserHandle.getCallingUserId());
+    }
+
+- 要想调用这个方法,必须得准备好三个参数,`Package`,`flags`,`PackageUserState`
+
+
+
+
+
+### 5.3.2 构建CompatilityInfo
