--- a/AOP/插件化/插件加载机制.md
+++ b/AOP/插件化/插件加载机制.md
@@ -325,4 +325,51 @@ ApplicationInfo的简介如下:
 
 - 要想调用这个方法,必须得准备好三个参数,`Package`,`flags`,`PackageUserState`
 
+- 创建完ApplicationInfo之后,需要进行修改.因为通过系统默认方法得到的`ApplicationInfo`对象并没有apk文件本身的信息,所以需要设置一下apk的解析路径 
+
+#### 5.3.1.1 Package
+`Package`类是`PackageParser`的静态内部类.代表磁盘里的Apk文件解析出来的信息
+
+> Representation of a full package parsed from APK files on disk. A package consists of a single base APK, and zero or more split APKs.
+
+**`PackageParser.parsePackage()`方法是用来解析包的方法.**
+
+> Parse the package at the given location. Automatically detects if the package is a monolithic style (single APK file) or cluster style (directory of APKs).
+
+    public Package parsePackage(File packageFile, 
+			int flags, boolean useCaches)
+	{``省略代码```}
+
+- 第一个参数是 apk文件,第二个参数是解析包的flag,选择0 表示解析所有
+
+#### 5.3.1.2 flags
+
+解析包使用的flag,传入0表示默认解析所有信息
+
+#### 5.3.1.3 PackageUserState
+Android系统是一个多任务多用户系统,因此不同的用户使用同一个包可能有不同的状态
+
+>Per-user state information about a package.
+
+查看其构造函数,发现并没有特殊的参数需要传入. 所以**这里传默认值即可,即直接调用构造函数创建...**
+
+    public PackageUserState() {}
+
+    public PackageUserState(PackageUserState o) {}
+
+
 ### 5.3.2 构建CompatilityInfo
+
+> CompatibilityInfo class keeps the information about compatibility mode that the application is running under.
+
+`CompatilityInfo`类中有一个静态变量`DEFAULT_COMPATIBILITY_INFO`代表默认兼容信息
+
+	public class CompatibilityInfo implements Parcelable {
+	    /** default compatibility info object for compatible applications */
+	    public static final CompatibilityInfo DEFAULT_COMPATIBILITY_INFO = new CompatibilityInfo() {
+	    };
+	}
+
+## 5.4 替换LoadedApk
+
+# 6. 绕过检查
