--- a/AOP/插件化/插件加载机制.md
+++ b/AOP/插件化/插件加载机制.md
@@ -6,9 +6,10 @@
 
 # 1. 简介
 
-通常情况下,插件会以额外的文件 存在于assets目录 或者 从网络下载.**这里就涉及到了一个问题 如何将额外的class文件加载到内存中.例如我们启动一个Activity,之前我们已经解决了启动未在清单文件中声明的Activity,但这时这个Activity存在于插件中,Activity是否能正确加载?**
+通常情况下,插件会以额外的文件 存在于assets目录 或者 从网络下载.**这里就涉及到了一个问题 如何将额外的class文件加载到内存中.例如启动一个Activity,之前已经解决了启动未在清单文件中声明的Activity(该Activity保存在同一个apk下).那么如果这个Activity存在于插件中,Activity是否能正确加载?**
 
 **本文基于Android27**
+
 # 2. 启动插件中的Activity会遇到的问题
 
 ## 2.1 正常Activity类的加载逻辑
@@ -95,7 +96,7 @@ Java类加载过程包括:加载,验证,准备,解析和初始化五个阶段,**
 
 1. 全面接管系统的类加载过程,添加一个加载插件`DexClassLoader`.
 
-	这种方案就需要往`mPackages`中添加能加载 插件的`LoadedApk`
+	这种方案就需要往`ArrayMap mPackages`中添加能加载 插件的`LoadedApk`,这样在寻找类对应加载器时 找到的就是手动添加的那个类加载器(**另外还需要将启动Activity的Intent 中的PKG信息 换成能加载 指定类加载器的**)
 
 2. 将插件位置告诉系统类加载器,让系统帮忙加载
 
@@ -131,23 +132,16 @@ Java类加载过程包括:加载,验证,准备,解析和初始化五个阶段,**
 - 通过`LoadedApk`获取类加载器:
 
 	    private void createOrUpdateClassLoaderLocked(List<String> addedPaths) {
-	        if (mPackageName.equals("android")) {
-	            // Note: This branch is taken for system server and we don't need to setup
-	            // jit profiling support.
-	            if (mClassLoader != null) {
-	                // nothing to update
-	                return;
-	            }
-	
-	            if (mBaseClassLoader != null) {
-	                mClassLoader = mBaseClassLoader;
-	            } else {
-	                mClassLoader = ClassLoader.getSystemClassLoader();
-	            }
-	
-	            return;
-	        }
 			``省略代码``
+	        if (mClassLoader == null) {
+	            // Temporarily disable logging of disk reads on the Looper thread
+	            // as this is early and necessary.
+				//最终返回的是PathClassLoader
+	            mClassLoader = ApplicationLoaders.getDefault().getClassLoader(zip,
+	                    mApplicationInfo.targetSdkVersion, isBundledApp, librarySearchPath,
+	                    libraryPermittedPath, mBaseClassLoader,
+	                    mApplicationInfo.classLoaderName);
+	        }
 	    }
 	
 	    public ClassLoader getClassLoader() {
@@ -254,7 +248,9 @@ Java类加载过程包括:加载,验证,准备,解析和初始化五个阶段,**
 
 2. 然后尝试获取缓存数据,如果没有缓存数据,那么直接创建LoadedApk对象.并且在创建成功之后会放入缓存(会判断userid)
 
-3. **注意,`LoadedApk`是通过包名获取的,如果想要获得指定的`LoadedApk`就需要传入指定的 包名!!!!!!,这点非常重要,如果想要获取到 加载插件的LoadedApk 那就必须传入 其对应的 包名,那就要求在绕过AMS检查 替换Intent的时候 将这个包名信息 也传入 `LoadedApk`**
+3. **注意,`LoadedApk`是通过包名获取的,如果想要获得指定的`LoadedApk`就需要传入指定的 包名!!!!!!,这点非常重要**
+
+	**如果想要获取到 加载插件的LoadedApk 那就必须传入 其对应的 包名,那就要求在绕过AMS检查之后,替换Intent的时候 将加载插件类加载器 对应的包名 替换掉之前Intent中的包名, 查看代码这个值应该是保存在`LoadedApk.ApplicationInfo`**
 
 
 ### 4.3.2  Hook点
@@ -267,15 +263,15 @@ Java类加载过程包括:加载,验证,准备,解析和初始化五个阶段,**
     @GuardedBy("mResourcesManager")
     final ArrayMap<String, WeakReference<LoadedApk>> mResourcePackages = new ArrayMap<>();
 
-- **`mPackages`中保存的是 关系是: 包名-LoadedApk**,插件如果是`.dex`形式,那么可能无法进行Hook(没有包名信息). 
+- **`mPackages`中保存的是 关系是: 包名-LoadedApk**,插件如果是`.dex`形式,那么可能无法进行Hook(无法构建LoadedApk,缺少信息). 
 
 ## 4.4 Hook方案
 
 根据之前的解决思路,可以有俩套方案去Hook 这个点:
 
-1. 针对`mPackages`缓存进行Hook,将原始的`LoadedApk.getClassLoader()`方法进行Hook,使其能返回修改过的`DexClassLoader`.这样在`perfromLaunchActivity()`中即可找到插件PKG对应的`ClassLoader`所在,并执行接下来的逻辑.
+1. 往`mPackages`中添加 新的 插件包名-代表插件信息的`LoadedApk` ,将`LoadedApk.getClassLoader()`方法进行Hook,使其能返回修改过的`DexClassLoader`.这样在`perfromLaunchActivity()`中即可使用`DexClassLoader`去加载插件.
 
-2. 通过Hook掉ClassLoader的`DexPathList`,将插件信息放入其中
+2. 通过Hook掉系统的`PathClassLoader`的`DexPathList`,将插件信息放入其中,使得系统类加载能够找到插件所在,从而完成加载
 
 
 # 5. 方案一
@@ -304,11 +300,11 @@ Java类加载过程包括:加载,验证,准备,解析和初始化五个阶段,**
 
 已经知道`ArrayMap mPackages`会储存LoadedApk,而`LoadedApk`对象里的`mClassLoader`变量 就是实际的类加载器.那么只要获取到这个`LoadedApk`并替换掉其`mClassLoader`即可解决无法加载插件类的问题
 
-**这里有俩种方式去获取到`LoadedApk`:**
+**获取`LoadedApk`的方式:**
 
-1. `mPackages`中已经存在,那么直接提取出来用即可.**但是,LoadedApk 是一个隐藏类,且没有接口,无法创建代理**
+1. `mPackages`中不存在插件包名对应的 类加载器,只存在当前宿主的类加载器.
 
-2. 直接构建LoadedApk对象,**这里需要注意,直接创建的`LoadedApk`缺少一些参数,我们需要手动替他添加**
+2. 构建LoadedApk对象,**这里需要注意,直接创建的`LoadedApk`会缺少一些参数,我们需要手动替他添加**
 
 
 **具体代码:**
@@ -318,7 +314,7 @@ Java类加载过程包括:加载,验证,准备,解析和初始化五个阶段,**
 
 ## 5.3 构建LoadedApk
 
-虽然可以直接通过反射调用它的构造函数直接创建出对象,但是这样对参数的准确性有很高的要求,一旦参数使用错误 可能就无法被系统所使用.
+**虽然可以直接通过反射调用它的构造函数直接创建出对象,但是这样对参数的准确性有很高的要求,一旦参数使用错误 可能就无法被系统所使用.**
 
 系统创建`LoadedApk`的方式 在4.3.1中已经分析过.**可以通过反射调用ActivityThread.getPackageInfoNoCheck()来获取到LoadedApk**,优先使用`getPackageInfoNoCheck()`而不使用`getPackageInfo()`是因为前者是 **公开的方法而后者是私有的方法,而且私有的方法很容易遭到修改**
 
@@ -346,6 +342,10 @@ Java类加载过程包括:加载,验证,准备,解析和初始化五个阶段,**
                     ApplicationInfo.class,
                     compatibilityInfo);
 	getPackageInfoNoCheck_method.setAccessible(true);
+	//获取ApplicationInfo,插件的
+	ApplicationInfo applicationInfo = (ApplicationInfo) getLocalApplicationInfo(apkFile);
+	//获取CompatibilityInfo
+	Object DEFAULT_COMPATIBILITY_INFO = getCompatibilityInfo();
 	//创建LoadedApk
 	Object loadedApk = getPackageInfoNoCheck_method.invoke(
                     sCurrentActivityThread,
@@ -499,5 +499,205 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 
 # 6. 不同版本上的问题
 
-上面的代码,在Android 22 上是能够正确运行.但是在Android 24 上是会抛出一个异常
+上面的代码,在Android 22 上是能够正确执行.但是在Android 24 上是会抛出一个异常
+
+	Caused by: java.lang.IllegalStateException: Unable to get package info for com.ryan.ndksample; is package not installed?
+		at android.app.LoadedApk.initializeJavaContextClassLoader(LoadedApk.java:636)
+		at android.app.LoadedApk.makeApplication(LoadedApk.java:796)
+		at android.app.ActivityThread.performLaunchActivity(ActivityThread.java:2597) 
+		at android.app.ActivityThread.handleLaunchActivity(ActivityThread.java:2749) 
+		at android.app.ActivityThread.-wrap12(ActivityThread.java) 
+		at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1498) 
+
+## 6.1 异常发生的地方(Android 24)
+
+    private void initializeJavaContextClassLoader() {
+        IPackageManager pm = ActivityThread.getPackageManager();
+        android.content.pm.PackageInfo pi;
+        try {
+            pi = pm.getPackageInfo(mPackageName, PackageManager.MATCH_DEBUG_TRIAGED_MISSING, UserHandle.myUserId());
+        } catch (RemoteException e) {
+            throw new IllegalStateException("Unable to get package info for "
+                    + mPackageName + "; is system dying?", e);
+        }
+        if (pi == null) {
+            throw new IllegalStateException("Unable to get package info for "
+                    + mPackageName + "; is package not installed?");
+        }
+		``省略代码```
+    }
+
+- 可以看到上述代码在获取PackageInfo的过程中,因为获取为空,所以抛出了这个异常
+
+查看`PackageManagerService.getPackageInfo()`....
+
+
+    @Override
+    public PackageInfo getPackageInfo(String packageName, int flags, int userId) {
+        if (!sUserManager.exists(userId)) return null;
+        flags = updateFlagsForPackage(flags, userId, packageName);
+        enforceCrossUserPermission(Binder.getCallingUid(), userId,
+                false /* requireFullPermission */, false /* checkShell */, "get package info");
+        // reader
+        synchronized (mPackages) {
+            final boolean matchFactoryOnly = (flags & MATCH_FACTORY_ONLY) != 0;
+            PackageParser.Package p = null;
+            if (matchFactoryOnly) {
+                final PackageSetting ps = mSettings.getDisabledSystemPkgLPr(packageName);
+                if (ps != null) {
+                    return generatePackageInfo(ps, flags, userId);
+                }
+            }
+            if (p == null) {
+                p = mPackages.get(packageName);
+                if (matchFactoryOnly && p != null && !isSystemApp(p)) {
+                    return null;
+                }
+            }
+            if (DEBUG_PACKAGE_INFO)
+                Log.v(TAG, "getPackageInfo " + packageName + ": " + p);
+            if (p != null) {
+                return generatePackageInfo((PackageSetting)p.mExtras, flags, userId);
+            }
+            if (!matchFactoryOnly && (flags & MATCH_UNINSTALLED_PACKAGES) != 0) {
+                final PackageSetting ps = mSettings.mPackages.get(packageName);
+                return generatePackageInfo(ps, flags, userId);
+            }
+        }
+        return null;
+    }
+
+## 6.2 解决办法(具体分析等分析完PMS之后再来)
+
+    // 这一步是因为 initializeJavaContextClassLoader 这个方法内部无意中检查了这个包是否在系统安装
+    // 如果没有安装, 直接抛出异常, 这里需要临时Hook掉 PMS, 绕过这个检查.
+
+    Class<?> activityThreadClass = Class.forName("android.app.ActivityThread");
+    Method currentActivityThreadMethod = activityThreadClass.getDeclaredMethod("currentActivityThread");
+    currentActivityThreadMethod.setAccessible(true);
+    Object currentActivityThread = currentActivityThreadMethod.invoke(null);
+
+    // 获取ActivityThread里面原始的 sPackageManager
+    Field sPackageManagerField = activityThreadClass.getDeclaredField("sPackageManager");
+    sPackageManagerField.setAccessible(true);
+    Object sPackageManager = sPackageManagerField.get(currentActivityThread);
+
+    // 准备好代理对象, 用来替换原始的对象
+    Class<?> iPackageManagerInterface = Class.forName("android.content.pm.IPackageManager");
+    Object proxy = Proxy.newProxyInstance(iPackageManagerInterface.getClassLoader(),
+            new Class<?>[] { iPackageManagerInterface },
+            new IPackageManagerHookHandler(sPackageManager));
+
+    // 1. 替换掉ActivityThread里面的 sPackageManager 字段
+    sPackageManagerField.set(currentActivityThread, proxy);
+
+# 7. 方案二
+
+通过Hook掉系统的`PathClassLoader`的`DexPathList`,将插件信息放入其中,使得系统类加载能够找到插件所在,从而完成加载
+
+## 7.1 加载流程分析
+
+由于默认的包名 对应的 类加载器的加载路径并不包含 插件,所以 方案一采用的解决办法是 手动构造一个`LoadedApk`(其实现的功能是返回指定`DexClassLoader`),并放入缓存中.这样在加载插件中类的时候,就会通过这个`DexClassLoader`
+
+**那么如果不通过这种方式去加载类,默认的类加载器 到底做了些什么?**
+
+	//ContextImpl
+    @Override
+    public ClassLoader getClassLoader() {
+        return mClassLoader != null ? mClassLoader : (mPackageInfo != null ? mPackageInfo.getClassLoader() : ClassLoader.getSystemClassLoader());
+    }
+
+- 系统使用的`ClassLoader` 分别从三个地方获取,`LoadedApk` 或`ClassLoader`本身或缓存`mClassLoader`
+
+	**优先程度:`mClassLoader`>`LoadedApk`>`ClassLoader`**
+
+## 7.2 ContextImpl mClassLoader
+
+系统类加载最优先获取的是 `mClassLoader`这个值,那么确认一下这个值是否为空?如果为空就好办 直接去分析`LoadedApk`即可.
+
+`ClassLoader mClassLoader`是`ContextImpl`的成员变量. 那么看一下`ContextImpl`的创建过程
+
+1. `ActivityThread.performLaunchActivity()`方法中创建了Activity对应的ContextImpl
+
+		ContextImpl appContext = createBaseContextForActivity(r);
+
+2. `ActivityThread.createBaseContextForActivity()`直接调用`ContextImpl`自身的方法去创建自身
+
+		ContextImpl appContext = ContextImpl.createActivityContext(
+                this, r.packageInfo, r.activityInfo, r.token, displayId, r.overrideConfig);
+
+3. `ContextImpl.createActivityContext()`
+
+	    static ContextImpl createActivityContext(ActivityThread mainThread,
+	            LoadedApk packageInfo, ActivityInfo activityInfo, IBinder activityToken, int displayId,
+	            Configuration overrideConfiguration) {
+
+	        ClassLoader classLoader = packageInfo.getClassLoader();
+	
+	        ContextImpl context = new ContextImpl(null, mainThread, packageInfo, activityInfo.splitName,
+	                activityToken, null, 0, classLoader);
+		}
+
+	这个方法里做了很重要的俩件事:
+
+	1. **通过`LoadedApk`创建了一个`ClassLoader`,这个`LoadedApk`是在`ActivityThread.H.handleMessage(LAUNCH_ACTIVITY)`中被创建的**
+
+	2. 调用构造函数创建了 `ContextImpl`
+
+4. `ContextImpl`的构造函数
+
+	    private ContextImpl(@Nullable ContextImpl container, @NonNull ActivityThread mainThread,
+	            @NonNull LoadedApk packageInfo, @Nullable String splitName,
+	            @Nullable IBinder activityToken, @Nullable UserHandle user, int flags,
+	            @Nullable ClassLoader classLoader) {
+	
+	        mPackageInfo = packageInfo;
+	
+	        mClassLoader = classLoader;
+	
+		}
+
+	- **从这里可以知道,默认的`mCLassLoader`不为空,它的值是通过`LoadedApk`获取的一个类加载器**
+
+
+**至此,可以知道`mClassLoader`并不为空,它的值是通过`LoadedApk`获取的.参考 4.2 可以知道 获取到的是`PathClassLoader`**
+
+
+## 7.3 系统ClassLoader是唯一的吗?
+
+系统获取类加载器是通过`LoadedApk`,`LoadedApk`都是通过`ApplicationLoaders.getDefault().getClassLoader()`获取的`ClassLoader`,查看其具体实现 可以发现都是同一个类加载器.**那么只需要将这个类加载器 Hook掉,即对所有的类加载器过程起作用**
+
+
+## 7.4 PathClassLoader 具体如何加载类?
+
+在获取到`PathClassLoader`之后,会借助`Instrumentation`来加载类,实际上只是调用`PathClassLoader`的`loadClass()`方法
+
+    public Activity newActivity(ClassLoader cl, String className,
+            Intent intent)
+            throws InstantiationException, IllegalAccessException,
+            ClassNotFoundException {
+        return (Activity)cl.loadClass(className).newInstance();
+    }
+
+类加载器的源码在`android.jar`之中,其线上源码在[DexClassLoader/PathClassLoader 源码地址](https://android.googlesource.com/platform/libcore/+/master/dalvik/src/main/java/dalvik/system)
+
+### 7.4.1 PathClassLoader 源码
+
+实际上,PathClassLoader仅仅是实现了其构造函数,主要功能的实现在`BaseDexClassLoader`
+
+	public class PathClassLoader extends BaseDexClassLoader {
+	
+	    public PathClassLoader(String dexPath, ClassLoader parent) {
+	        super(dexPath, null, null, parent);
+	    }
+	
+	    public PathClassLoader(String dexPath, String librarySearchPath, ClassLoader parent) {
+	        super(dexPath, null, librarySearchPath, parent);
+	    }
+	}
+
+### 7.4.2 BaseDexClassLoader 源码
+
+查看过`BaseDexClassLoader`的源码之后,就能发现其基本上是借助`DexPathList`实现
+
 
