--- a/AOP/插件化/插件加载机制.md
+++ b/AOP/插件化/插件加载机制.md
@@ -495,9 +495,205 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 
 - 注意 `LoadedApk`被虚引用包装
 
-# 6. 完整逻辑
+# 6. 方案一:完整逻辑
 
-# 6. 不同版本上的问题
+1. 默认打开一个 插件中的 未在清单文件中注册的`Activity:FakeActivity`
+
+		startActivity(new Intent(MainActivity.this, FakeActivity.class));
+
+2. 需要Hook掉`AMS.startActivity()`的方法, 将`FakeActivity`替换成`MainActivity`(即在替换成在清单文件中注册过的Activity,绕开检查)
+		Class acitivtyManagerNativeClass = Class.forName("android.app.ActivityManagerNative");
+		Field gDefaultField = acitivtyManagerNativeClass.getDeclaredField("gDefault");
+		gDefaultField.setAccessible(true);
+		Object gDefault = gDefaultField.get(null);
+
+		Class singleTonClass = Class.forName("android.util.Singleton");
+		Field mInstanceField = singleTonClass.getDeclaredField("mInstance");
+		mInstanceField.setAccessible(true);
+
+		//获取到了IActivityManager.即Binder.Stub.Proxy
+		Object mInstance = mInstanceField.get(gDefault);
+
+		Object newInstance = Proxy.newProxyInstance(mInstance.getClass().getClassLoader(),
+                    new Class[]{IBinder.class,
+                            IInterface.class,
+                            Class.forName("android.app.IActivityManager")},
+                    new ActivityProxy(mInstance));
+
+		mInstanceField.set(gDefault, newInstance);
+
+	**ActivityProxy**
+
+		public class ActivityProxy implements InvocationHandler {
+		
+		    private Object mBase;
+		
+		    public ActivityProxy(Object base) {
+		        mBase = base;
+		    }
+		
+		    @Override
+		    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+		        Log.d("ActivityProxy", "hello ? " + method.getName() + ",do something");
+		        if (method.getName().equals("startActivity")) {
+		
+		        }
+		
+		        return method.invoke(mBase, args);
+		    }
+		}
+
+3. 需要Hook掉`ActivityThread.H.handleMessage()`,将已绕过AMS检查的Intent 中的 信息替换掉.**另外 必须得将activityInfo所带的包名 修改掉,这样才能在`ActivityThread.mPackages`中找到对应的`LoadedApk`**
+
+		//获取ActivityThread对象
+		Class class_activityThread = Class.forName("android.app.ActivityThread");
+		Method method_currentActivityThread = class_activityThread.getMethod("currentActivityThread",
+                    new Class[]{});
+		method_currentActivityThread.setAccessible(true);
+		Object activityThread = method_currentActivityThread.invoke(null, new Object[]{});
+
+		//获取mH 这个Handler
+		Field mHField = class_activityThread.getDeclaredField("mH");
+		//这一步是为了绕过Java检查，而不是将修饰符修改成public
+		mHField.setAccessible(true);
+		Object mH = mHField.get(activityThread);
+
+		//获取mH 中的mCallback对象
+		Field field_callBack = Handler.class.getDeclaredField("mCallback");
+		field_callBack.setAccessible(true);
+		// 给mCallback设置回调
+		field_callBack.set(mH, mDispatcher);
+
+	    public Handler.Callback mDispatcher = new Handler.Callback() {
+	        @Override
+	        public boolean handleMessage(Message msg) {
+	            if (msg.what == 100) {
+	                Object record = msg.obj;
+	                try {
+	                    Field intentField = record.getClass().getDeclaredField("intent");
+	                    intentField.setAccessible(true);
+	                    Intent intent = (Intent) intentField.get(record);
+	                    Log.d("mDispatcher", intent.getComponent().getClassName());
+	                    Log.d("mDispatcher", intent.getComponent().getPackageName());
+						//if (intent.hasExtra("TARGET_INTENT")) {
+	                    if (intent.getComponent().getClassName().equals("com.ryan.hotfix.MainActivity")) {
+	                        Intent realIntent = new Intent();
+	                        realIntent.setComponent(new ComponentName(
+	                                "com.ryan.ndksample",                               "com.ryan.ndksample.MainActivity"));
+	                        intentField.set(record, realIntent);
+	
+	                        Field activityInfoField = msg.obj.getClass().getDeclaredField("activityInfo");
+	                        activityInfoField.setAccessible(true);
+	
+	                        // 根据 getPackageInfo 根据这个 包名获取 LoadedApk的信息; 因此这里我们需要手动填上, 从而能够命中缓存
+	                        ActivityInfo activityInfo = (ActivityInfo) activityInfoField.get(msg.obj);
+	                        activityInfo.applicationInfo.packageName = realIntent.getPackage() == null ?
+	                                realIntent.getComponent().getPackageName() : realIntent.getPackage();
+	                    }
+	                } catch (Exception e) {
+	                    e.printStackTrace();
+	                }
+	            }
+	            return false;
+	        }
+	    };
+
+4. Hook掉mPackages,根据插件信息生成一个`LoadedApk` 放入`ArrayMap mPackages`
+
+            //获取到mPackages
+            Class activityThread_class = Class.forName("android.app.ActivityThread");
+            Field sCurrentActivityThread_field = activityThread_class.
+                    getDeclaredField("sCurrentActivityThread");
+            sCurrentActivityThread_field.setAccessible(true);
+            Object sCurrentActivityThread = sCurrentActivityThread_field.get(null);
+
+            Field mPackages_field = activityThread_class.
+                    getDeclaredField("mPackages");
+            mPackages_field.setAccessible(true);
+            //ArrayMap<String, WeakReference<LoadedApk>> mPackages
+            ArrayMap mPackages = (ArrayMap) mPackages_field.get(sCurrentActivityThread);
+
+            Class compatibilityInfo = Class.forName("android.content.res.CompatibilityInfo");
+
+            Method getPackageInfoNoCheck_method = activityThread_class.getDeclaredMethod(
+                    "getPackageInfoNoCheck",
+                    ApplicationInfo.class,
+                    compatibilityInfo);
+            getPackageInfoNoCheck_method.setAccessible(true);
+
+            //获取ApplicationInfo,插件的
+            ApplicationInfo applicationInfo = (ApplicationInfo) getLocalApplicationInfo(apkFile);
+
+            //获取CompatibilityInfo
+            Object DEFAULT_COMPATIBILITY_INFO = getCompatibilityInfo();
+            //获取LoadedApk
+            Object loadedApk = getPackageInfoNoCheck_method.invoke(
+                    sCurrentActivityThread,
+                    applicationInfo,
+                    DEFAULT_COMPATIBILITY_INFO);
+
+            //替换LoadedApk中的ClassLoader
+            Field mClassLoader_Field = loadedApk.getClass().
+                    getDeclaredField("mClassLoader");
+            mClassLoader_Field.setAccessible(true);
+            DexClassLoader dexClassLoader = new DexClassLoader(apkFile.getAbsolutePath(),
+                    getPluginOptDirPath(),
+                    getPluginLibSearchPath(),
+                    ClassLoader.getSystemClassLoader());
+
+            mClassLoader_Field.set(loadedApk, dexClassLoader);
+            //替换mPackages中的 loadedapk
+            mPackages.put(applicationInfo.packageName, new WeakReference(loadedApk));
+
+            mPackages_field.set(sCurrentActivityThread, mPackages);
+	
+	**获取CompatibilityInfo**
+
+	    private Object getCompatibilityInfo() throws Exception {
+	        Class compatibilityInfo = Class.forName("android.content.res.CompatibilityInfo");
+	        Field DEFAULT_COMPATIBILITY_INFO_field = compatibilityInfo.
+	                getDeclaredField("DEFAULT_COMPATIBILITY_INFO");
+	        DEFAULT_COMPATIBILITY_INFO_field.setAccessible(true);
+	        return DEFAULT_COMPATIBILITY_INFO_field.get(null);
+	    }
+
+	**获取ApplicationInfo**
+
+	    public Object getLocalApplicationInfo(File apkFile) {
+	        try {
+	            Class packageParser_class = Class.forName("android.content.pm.PackageParser");
+	            Class package_class = Class.forName("android.content.pm.PackageParser$Package");
+	            Class packageUserState_class = Class.forName("android.content.pm.PackageUserState");
+	
+	            Method parsePackage_method = packageParser_class.
+	                    getDeclaredMethod("parsePackage", File.class, int.class);
+	            parsePackage_method.setAccessible(true);
+	            Object package_obj = parsePackage_method.invoke(
+	                    packageParser_class.newInstance(),
+	                    apkFile,
+	                    0);
+	
+	            Method generateApplicationInfo_method = packageParser_class.
+	                    getDeclaredMethod("generateApplicationInfo",
+	                            package_class,
+	                            int.class,
+	                            packageUserState_class);
+	            generateApplicationInfo_method.setAccessible(true);
+	            ApplicationInfo applicationInfo = (ApplicationInfo) generateApplicationInfo_method.invoke(null,
+	                    package_obj, 0,
+	                    packageUserState_class.newInstance());
+	            applicationInfo.sourceDir = apkFile.getPath();
+	            applicationInfo.publicSourceDir = apkFile.getPath();
+	
+	            return applicationInfo;
+	        } catch (Exception e) {
+	            Log.e("MainActivity", "getLocalApplicationInfo = " + e.getMessage());
+	        }
+	        return null;
+	    }
+
+
+# 7. 不同版本上的问题
 
 上面的代码,在Android 22 上是能够正确执行.但是在Android 24 上是会抛出一个异常
 
@@ -509,7 +705,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 		at android.app.ActivityThread.-wrap12(ActivityThread.java) 
 		at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1498) 
 
-## 6.1 异常发生的地方(Android 24)
+## 7.1 异常发生的地方(Android 24)
 
     private void initializeJavaContextClassLoader() {
         IPackageManager pm = ActivityThread.getPackageManager();
@@ -567,7 +763,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
         return null;
     }
 
-## 6.2 解决办法(具体分析等分析完PMS之后再来)
+## 7.2 解决办法(具体分析等分析完PMS之后再来)
 
     // 这一步是因为 initializeJavaContextClassLoader 这个方法内部无意中检查了这个包是否在系统安装
     // 如果没有安装, 直接抛出异常, 这里需要临时Hook掉 PMS, 绕过这个检查.
@@ -591,11 +787,11 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
     // 1. 替换掉ActivityThread里面的 sPackageManager 字段
     sPackageManagerField.set(currentActivityThread, proxy);
 
-# 7. 方案二
+# 8. 方案二
 
 通过Hook掉系统的`PathClassLoader`的`DexPathList`,将插件信息放入其中,使得系统类加载能够找到插件所在,从而完成加载
 
-## 7.1 加载流程分析
+## 8.1 加载流程分析
 
 由于默认的包名 对应的 类加载器的加载路径并不包含 插件,所以 方案一采用的解决办法是 手动构造一个`LoadedApk`(其实现的功能是返回指定`DexClassLoader`),并放入缓存中.这样在加载插件中类的时候,就会通过这个`DexClassLoader`
 
@@ -611,7 +807,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 
 	**优先程度:`mClassLoader`>`LoadedApk`>`ClassLoader`**
 
-## 7.2 ContextImpl mClassLoader
+## 8.2 ContextImpl mClassLoader
 
 系统类加载最优先获取的是 `mClassLoader`这个值,那么确认一下这个值是否为空?如果为空就好办 直接去分析`LoadedApk`即可.
 
@@ -663,12 +859,12 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 **至此,可以知道`mClassLoader`并不为空,它的值是通过`LoadedApk`获取的.参考 4.2 可以知道 获取到的是`PathClassLoader`**
 
 
-## 7.3 系统ClassLoader是唯一的吗?
+## 8.3 系统ClassLoader是唯一的吗?
 
 系统获取类加载器是通过`LoadedApk`,`LoadedApk`都是通过`ApplicationLoaders.getDefault().getClassLoader()`获取的`ClassLoader`,查看其具体实现 可以发现都是同一个类加载器.**那么只需要将这个类加载器 Hook掉,即对所有的类加载器过程起作用**
 
 
-## 7.4 PathClassLoader 具体如何加载类?
+## 8.4 PathClassLoader 具体如何加载类?
 
 在获取到`PathClassLoader`之后,会借助`Instrumentation`来加载类,实际上只是调用`PathClassLoader`的`loadClass()`方法
 
@@ -681,7 +877,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 
 类加载器的源码在`android.jar`之中,其线上源码在[DexClassLoader/PathClassLoader 源码地址](https://android.googlesource.com/platform/libcore/+/master/dalvik/src/main/java/dalvik/system)
 
-### 7.4.1 PathClassLoader 源码
+### 8.4.1 PathClassLoader 源码
 
 实际上,PathClassLoader仅仅是实现了其构造函数,主要功能的实现在`BaseDexClassLoader`
 
@@ -696,8 +892,132 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 	    }
 	}
 
-### 7.4.2 BaseDexClassLoader 源码
+### 8.4.2 loadClass流程
+
+**ClassLoader**
 
 查看过`BaseDexClassLoader`的源码之后,就能发现其基本上是借助`DexPathList`实现
 
+	//ClassLoader
+    public Class<?> loadClass(String name) throws ClassNotFoundException {
+        return loadClass(name, false);
+    }
+	//ClassLoader
+    protected Class<?> loadClass(String name, boolean resolve)
+        throws ClassNotFoundException
+    {
+            // First, check if the class has already been loaded
+            Class<?> c = findLoadedClass(name);
+            if (c == null) {
+                try {
+                    if (parent != null) {
+                        c = parent.loadClass(name, false);
+                    } else {
+                        c = findBootstrapClassOrNull(name);
+                    }
+                } catch (ClassNotFoundException e) {
+                    // ClassNotFoundException thrown if class not found
+                    // from the non-null parent class loader
+                }
+
+                if (c == null) {
+                    // If still not found, then invoke findClass in order
+                    // to find the class.
+                    c = findClass(name);
+                }
+            }
+            return c;
+    }
+	//ClassLoader
+    protected Class<?> findClass(String name) throws ClassNotFoundException {
+        throw new ClassNotFoundException(name);
+    }
+
+- `findClass(name)`是当前类加载器去执行加载操作的地方,在`ClassLoader`类中是抽象的,由`BaseDexClassLoader`类继承并实现
+
+**BaseDexClassLoader**
+
+	//BaseDexClassLoader
+    @Override
+    protected Class<?> findClass(String name) throws ClassNotFoundException {
+        List<Throwable> suppressedExceptions = new ArrayList<Throwable>();
+        Class c = pathList.findClass(name, suppressedExceptions);
+        if (c == null) {
+            ClassNotFoundException cnfe = new ClassNotFoundException(
+                    "Didn't find class \"" + name + "\" on path: " + pathList);
+            for (Throwable t : suppressedExceptions) {
+                cnfe.addSuppressed(t);
+            }
+            throw cnfe;
+        }
+        return c;
+    }
+
+- `findClass()`方法只是将查找类的操作转交给`pathList`,`pathList`是`DexPathList`类型
+
+**DexPathList**
+
+    /**
+     * Finds the named class in one of the dex files pointed at by
+     * this instance. This will find the one in the earliest listed
+     * path element. If the class is found but has not yet been
+     * defined, then this method will define it in the defining
+     * context that this instance was constructed with.
+     * /
+
+    public Class<?> findClass(String name, List<Throwable> suppressed) {
+        for (Element element : dexElements) {
+            Class<?> clazz = element.findClass(name, definingContext, suppressed);
+            if (clazz != null) {
+                return clazz;
+            }
+        }
+        if (dexElementsSuppressedExceptions != null) {
+            suppressed.addAll(Arrays.asList(dexElementsSuppressedExceptions));
+        }
+        return null;
+    }
+
+- **这个方法会根据给定的类名称,在指定的`.dex`文件中查找.会优先取出数组最靠前的一个.如果该类尚未定义,则会去定义它**
+
+**Element**
+
+	public Class<?> findClass(String name, 
+		ClassLoader definingContext,
+		List<Throwable> suppressed) {
+		return dexFile != null ? dexFile.loadClassBinaryName(name, definingContext, suppressed): null;
+	}
+
+**DexFile**
+
+    public Class loadClassBinaryName(String name, ClassLoader loader, List<Throwable> suppressed) {
+        return defineClass(name, loader, mCookie, this, suppressed);
+    }
+
+    private static Class defineClass(String name, ClassLoader loader, Object cookie,
+                                     DexFile dexFile, List<Throwable> suppressed) {
+        Class result = null;
+        try {
+            result = defineClassNative(name, loader, cookie, dexFile);
+        } catch (NoClassDefFoundError e) {
+            if (suppressed != null) {
+                suppressed.add(e);
+            }
+        } catch (ClassNotFoundException e) {
+            if (suppressed != null) {
+                suppressed.add(e);
+            }
+        }
+        return result;
+    }
+
+- 最终是通过 本地方法 加载`.dex`文件中的类
+
+## 8.5 Hook点分析
+
+通过7.4.2 的分析, `PathClassLoader.loadClass()`最终会交给`DexPathList.findClass()`,在`DexPathList.findClass()`方法中 有遍历`Element`数组 去加载类(**这个`Element`保存有dex/resource的路径等信息**)
+
+**同时有一点很重要,那就是`DexPathList.findClass()`的时候会优先获取`Element[]`数组中 最靠前的`Element`中的类**
+
+那么 只需要Hook掉 这个`Element[] dexElements`,利用插件信息生成一个`Element` 并添加到这个数组.
 
